[package]
name = "vtc-service"
description = "Service for Verifiable Trust Communities"
readme = "README.md"
version = "0.11.10"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["setup", "keyring", "website", "admin-ui"]
# Trust Spanning Protocol transport (additive, OFF by default). Enables the
# SDK's `tsp` capability for the VTC; later PRs add the TSP listener + the
# `send_to_member` TSP path behind it. DIDComm stays the VTC's default member
# transport until the phased flip (docs/05-design-notes/tsp-enablement.md §12).
tsp = ["vta-sdk/tsp"]
# Test-harness surface: the `test_support` module (in-process `TestVtc`
# builder, `MockVtc` listening server, JWT/session minting). Enabled by
# the crate's own integration tests via a `[dev-dependencies]` self-dep,
# and by downstream multi-service harnesses (`vti-harness`). Kept out of
# production builds — it pulls in `tempfile` and exposes seeding helpers.
test-support = ["dep:tempfile"]
# In-process DIDComm join-requests harness for `MockVtc` (#436). Spins up an
# embedded `affinidi-messaging-test-mediator`, stands up a VTC DIDComm responder
# bound to the REAL `submit`/`manifest`/`status` handlers, and exercises the
# credential-delivery push so an issued VMC lands back over DIDComm. Pulls the
# test mediator + the SDK's `vp` helper (for the worked manifest -> VP leg).
# Implies `test-support`. Test-only — never in a production build.
didcomm-harness = [
  "test-support",
  "dep:affinidi-messaging-test-mediator",
  "vta-sdk/vp",
]
setup = ["dep:dialoguer", "dep:didwebvh-rs", "dep:url"]
# BBS+ (`bbs-2023`) verifier support — lets the join verifier accept
# selectively-disclosed bbs-2023 presentations. Pulls in the BLS12-381 curve
# (`affinidi-bbs`) + the `bbs-2023` Data-Integrity cryptosuite. Off by default.
bbs = ["dep:affinidi-bbs", "dep:ciborium", "affinidi-data-integrity/bbs-2023"]
# Public community website (§12.1). Filesystem-backed static
# hosting at `website.root_dir`. Default-on so MVP `cargo run`
# serves a site; operators who host externally can compile it
# out via `--no-default-features --features setup,keyring`.
website = [
  "dep:mime_guess",
  "dep:unicode-normalization",
  "dep:tar",
  "dep:flate2",
  # `default_site` bakes the placeholder landing page via `include_dir!`.
  "dep:include_dir",
]
# Embedded admin UX (§12.2). Static HTML/CSS/JS source lives at
# `vtc-service/admin-ui/`; baked into the binary via `include_dir!`
# at compile time. Per Phase 5 D1, the source is **in-tree** —
# there is no sibling repo, no release-signed tarball fetch, no
# offline-build fallback. Operators replace the directory contents
# to ship a custom UX.
admin-ui = ["website"]
# OS keyring backend for the VTC secret. Enables vta-sdk's keyring feature
# so the binary can register a platform store once via
# `vta_sdk::keyring_init::install_default_store()` at startup.
# The secret-store backend implementations + the setup wizard's secret
# enumeration (`vti_secrets::discovery`) both live in `vti-secrets` now, so
# these features just activate the matching `vti-secrets/<feature>` — the VTC
# no longer carries the cloud SDKs / kube client directly.
keyring = ["dep:keyring-core", "vta-sdk/keyring", "vti-secrets/keyring"]
config-secret = ["vti-secrets/config-seed"]
aws-secrets = ["vti-secrets/aws-secrets"]
gcp-secrets = ["vti-secrets/gcp-secrets"]
azure-secrets = ["vti-secrets/azure-secrets"]
# Kubernetes Secret backend — stores the VTC key bundle in a namespaced
# `Secret` resource. Off by default; for in-cluster deployments that prefer
# native k8s Secrets over a cloud secret manager.
k8s-secrets = ["vti-secrets/k8s-secrets"]
# HashiCorp Vault backend (KV v2 + kubernetes/token/approle auth). Reuses
# the shared `vti-secrets` Vault implementation. No direct dep: the VTC
# setup wizard has no Vault picker, so operators configure it via the
# `[secrets]` table (`vault_addr`, …) or `setup --from <toml>`.
vault-secrets = ["vti-secrets/vault-secrets"]

[[bin]]
name = "vtc"
path = "src/main.rs"

[dependencies]
vti-common = { path = "../vti-common", version = "0.11", features = [
  "passkey",
  # `setup` gates the shared dialoguer-driven secrets-prompt helper
  # the wizard calls into.
  "setup",
  # `encryption` enables `KeyspaceHandle::with_encryption` /
  # `migrate_to_encrypted` for at-rest encryption of the secret-bearing
  # keyspaces (install, audit_key, passkey) — P0.7.
  "encryption",
  # `openapi` gates ToSchema on shared wire types (Role, SessionState) +
  # the OpenAPI-aware Trust-Task route helpers (`task_routes`/`task_layer`).
  "openapi",
] }
# Shared secret-store backend implementations (the VTC's `create_secret_store`
# factory + `*SecretStore` names are a thin facade over these). Per-backend
# features are activated by this crate's matching features above.
vti-secrets = { path = "../vti-secrets", version = "0.1" }
vta-sdk = { path = "../vta-sdk", version = "0.19", features = [
  "didcomm",
  "session",
  "config-session",
  # `provision-client` pulls in `provision-integration` + `sealed-transfer`
  # transitively, giving the `vtc setup` wizard the full
  # `run_provision` orchestration + `TemplateBootstrapPayload`
  # opener so it can bootstrap the VTC's identity against a VTA
  # (see `tasks/vtc-mvp/vta-driven-keys.md` §3).
  "provision-client",
  # `openapi` gates ToSchema on the vta-sdk protocol wire types the VTC
  # surface references (credential-exchange, discovery, etc.).
  "openapi",
  # Lets `main()` install the rustls aws-lc-rs CryptoProvider at startup.
  "crypto-provider",
] }
affinidi-tdk = { workspace = true }
# D1 delivery layer (P1a cut-over): `MessagingService` (subscribe/send) over a
# `DidCommTransport`, replacing the old `affinidi-messaging-didcomm-service`
# type-routed framework. `affinidi-messaging-core` supplies the transport
# contract types (`MessageTransport`, `Inbound`); `VtiOutboxStore` (vti-common)
# backs the outbox.
affinidi-messaging-delivery = { workspace = true }
affinidi-messaging-core = { workspace = true }
# `StreamExt::next` on the `BoxStream` returned by `MessagingService::subscribe`.
futures-util = "0.3"
# Trust Task document framework — `TrustTask<P>`, `respond_with`,
# `reject_with`, `RejectReason`, `TypeUri` (join-request ceremony flow).
# `trust-tasks-https` provides `status_for_code` for the HTTP status of a
# reject document.
trust-tasks-rs = { workspace = true }
trust-tasks-https = { workspace = true }
# W3C VC builder + Data Integrity proof signing/verification. Used
# by `crate::credentials` for VMC + VEC issuance (Phase 2 M2.9).
# Same crates as `vta-sdk::provision_integration::credential` —
# canonical workspace path for credential issuance.
affinidi-vc = { workspace = true }
affinidi-data-integrity = { workspace = true }
# BBS+ verifier primitives + G2 issuer keys — only under the `bbs` feature.
affinidi-bbs = { workspace = true, optional = true }
affinidi-secrets-resolver = { workspace = true }
# DTG (Decentralized Trust Graph) credentials catalog — canonical credential shapes
# (Membership, Endorsement, Invitation, …). Phase 2 sources every issued
# credential's shape from this catalog rather than hand-rolling each VC.
dtg-credentials = { workspace = true }
# JSON Schema validation of issued credentials against their credentialSchema.
jsonschema = { workspace = true }
# DCQL (via OpenID4VP) — the schema store's Accepts criterion is a DCQL query.
affinidi-openid4vp = { workspace = true }
# OID4VCI — the issuer side of credential-exchange (offer/request/issue);
# the body the `credential-exchange/*` Trust Tasks carry (Phase 3 §6).
affinidi-openid4vci = { workspace = true }
# SD-JWT-VC verification — the VTC verifier checks a presented `vp_token`
# (issuer JWS + holder kb-jwt) on the `credential-exchange/present` path (3.4).
affinidi-sd-jwt = { workspace = true }
# Bitstring status list — privacy-preserving credential revocation
# per W3C. Used by `crate::status_list` (Phase 2 M2.10).
affinidi-status-list = { workspace = true }
# Reqwest — HTTP client for the in-tree trust-registry
# transport (Phase 3 M3.2's health probe + M3.10's TRQP
# query path). The crate is already in our transitive tree
# via affinidi-tdk; surfacing as a direct dep makes the
# version pin visible to clippy + cargo-audit.
reqwest = { workspace = true }
# Constant-time byte comparison. Used by the CSRF + WebAuthn
# challenge equality checks where naive `==` on a secret-derived
# string leaks prefix-match length over the wire.
subtle = { workspace = true }
# `async-trait` — already a direct dep for emergency::VtaRecoveryProver;
# Phase 3's TrustRegistryClient trait reuses it.
# Lower-level DIDComm message types — needed for the join-request
# message handler in `messaging.rs` (M1.8.2). The service crate
# accepts `Message` / `UnpackMetadata` by value but doesn't
# re-export them.
affinidi-messaging-didcomm = "0.15"
# Embedded in-process test mediator for the `didcomm-harness` feature
# (`MockVtc::start_didcomm`, #436). Optional + feature-gated so it never
# enters a production build; same crate the e2e suite uses.
affinidi-messaging-test-mediator = { version = "0.2", optional = true }
tokio-util = { workspace = true, features = ["rt"] }
affinidi-did-resolver-cache-sdk = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
# OpenAPI: `OpenApiRouter` makes the router the source of truth for the served
# `/openapi.json`; `utoipa` provides `#[utoipa::path]` + `ToSchema` derives.
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
jsonwebtoken = { workspace = true }
fjall = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "timeout"] }
tower_governor = "0.8"
mime_guess = { version = "2", optional = true }
unicode-normalization = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
include_dir = { version = "0.7", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
keyring-core = { workspace = true, optional = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
didwebvh-rs = { workspace = true, optional = true }
rand = { workspace = true }
dialoguer = { workspace = true, optional = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
multibase = { workspace = true }
# CBOR decode for the bbs-2023 derived proofValue (extracting the embedded
# presentation header + pseudonym tag in the verifier). Optional, pulled in by
# the `bbs` feature; also a dev-dependency for non-bbs test parsing.
ciborium = { version = "0.2", optional = true }
# Rego policy interpreter (Phase 2 M2.1). Hosted in `crate::policy`.
# Spec §3-J + §7: regorus runs in-process; no external OPA sidecar.
regorus = { workspace = true }
url = { workspace = true, optional = true }
# BIP-39 mnemonic parsing for `vtc admin emergency-bootstrap` (M0.10).
# Same pin as `vta-service`.
bip39 = "2"
# Argon2id for hashing admin-invite claim secrets (the out-of-band
# code the invitee types alongside the install URL). Same pin as
# `vta-service`'s backup-password KDF.
argon2 = "0.5"
# AES-256-GCM for the encrypted backup/restore payload (P3.9). Same
# workspace pin as `vta-service`'s backup feature.
aes-gcm = { workspace = true }
# Hostname capture for the `EmergencyBootstrapInvoked` audit event.
gethostname = "1"
# WebAuthn — used by `crate::webauthn` for Ed25519-only registration
# wrappers (M0.5.1). The protocol crate is a direct dep so we can
# reference `PubKeyCredParams` and `COSEAlgorithm` without funnelling
# them through `webauthn-rs::prelude` (which re-exports them but
# also surfaces ~300 unrelated symbols).
webauthn-rs = { workspace = true }
webauthn-rs-proto = "0.5"
# `async_trait` is the dyn-compatibility helper for the
# `emergency::VtaRecoveryProver` trait so production code +
# integration tests can swap in their own provers.
async-trait = "0.1"
# did:key → Ed25519 public-key conversion for the join-request
# holder-binding signature verifier (M1.8.1).
affinidi-crypto = { workspace = true }
# Optional — only compiled under the `test-support` feature, which the
# `test_support` module (and downstream harnesses) need for tempdir-
# backed stores. Also a `[dev-dependencies]` entry for the crate's own
# `cargo test` (no feature flag) — both must stay in sync.
tempfile = { version = "3", optional = true }

[dev-dependencies]
# Self-dep with `test-support` enabled so integration tests under
# `tests/` can import `vtc_service::test_support` (`TestVtc`, `MockVtc`).
vtc-service = { path = ".", features = ["test-support", "didcomm-harness"] }
tempfile = "3"
# Integration tests under `tests/` exercise the route stack via
# `Router::oneshot` — same pattern as `vta-service/tests/api_integration.rs`.
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
# CBOR encoding for the soft Ed25519 authenticator harness
# (`tests/common/webauthn_harness.rs`). Produces the CTAP attestation
# object + COSE public key on the same wire shape `webauthn-rs-core`
# parses (it uses `serde_cbor_2` internally — `ciborium` is canonical
# enough for both to agree).
ciborium = "0.2"
# Local HTTP server for the foreign-fetch hardening tests (P0.4): drives the
# shared client's redirect-none / timeout / body-cap behaviour against a real
# socket. Same version the rest of the workspace pins.
wiremock = "0.6"

[lints]
workspace = true
