[package]
name = "vti-common"
description = "Shared server-side infrastructure for VTA and VTC services"
readme = "README.md"
version = "0.6.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
encryption = ["dep:aes-gcm", "dep:zeroize"]
vsock-store = ["dep:tokio-vsock", "dep:libc"]
# Exposes `AuthClaims::unsafe_local_cli_super_admin` — a synthesizer that
# produces a super-admin claim without any wire-level verification. Only
# for the local/dev `vta` binary's CLI, where the trust boundary is the
# OS process (not the network). NEVER enable in enclave builds.
cli-synthesis = []
# Shared WebAuthn / passkey infrastructure (types + storage). Services
# (VTA, VTC) implement the `auth::passkey::PasskeyState` trait on their
# `AppState` and gain reusable enrolment + login storage primitives. The
# concrete route handlers ship in a follow-up so this feature stays
# storage-only for now.
passkey = ["dep:webauthn-rs", "dep:url", "dep:hex"]

[dependencies]
async-trait = "0.1"
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
fjall = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

# Secrets resolver (for error type)
affinidi-tdk = { workspace = true }

# Encryption (feature-gated; `rand` is non-optional and lives in the main
# dep block since audit_key rotation also needs OS randomness).
aes-gcm = { workspace = true, optional = true }
zeroize = { version = "1", features = ["derive"], optional = true }

# Vsock storage proxy client (feature-gated, Linux only)
tokio-vsock = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

# Passkey feature deps (`rand` already declared above for `encryption`;
# `uuid` is non-optional and lives in the main dep block).
webauthn-rs = { workspace = true, optional = true }
url = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
# `base64` is now in the main `[dependencies]` (audit envelope encodes
# 32-byte hashes as base64url strings).
# Drives Router::oneshot in the trust_task router tests. Same pattern
# vtc-service / vta-service use for integration tests.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"

[lints]
workspace = true
