[package]
name = "vti-common"
description = "Shared server-side infrastructure for VTA and VTC services"
readme = "README.md"
version = "0.11.9"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
encryption = ["dep:aes-gcm", "dep:zeroize"]
vsock-store = ["dep:tokio-vsock", "dep:libc"]
# Exposes `AuthClaims::unsafe_local_cli_super_admin` — a synthesizer that
# produces a super-admin claim without any wire-level verification. Only
# for the local/dev `vta` binary's CLI, where the trust boundary is the
# OS process (not the network). NEVER enable in enclave builds.
cli-synthesis = []
# Shared WebAuthn / passkey infrastructure (types + storage). Services
# (VTA, VTC) implement the `auth::passkey::PasskeyState` trait on their
# `AppState` and gain reusable enrolment + login storage primitives. The
# concrete route handlers ship in a follow-up so this feature stays
# storage-only for now.
passkey = ["dep:webauthn-rs", "dep:url"]
# Interactive setup helpers (dialoguer prompts) shared between
# `vta-service` and `vtc-service`'s setup wizards. Headless consumers
# (TEE enclave, server runtime) skip this to avoid pulling in
# `dialoguer` + its console deps. The prompts return services'
# own config shapes (each service has its own `SecretsConfig`).
setup = ["dep:dialoguer"]
# OpenAPI schema generation: derives `utoipa::ToSchema` on the shared wire
# types the VTA + VTC services expose through their `OpenApiRouter` (the ACL
# `Role`, session `SessionState`). Off by default and zero-cost when off —
# only the services turn it on.
openapi = ["dep:utoipa", "dep:utoipa-axum"]

[dependencies]
# vta-sdk for the canonical auth wire shapes
# (`protocols::auth::ChallengeResponse`, `AuthenticateResponse`,
# `TokenBundle`). These are SIOPv2 / RFC 6749-shaped public types
# that clients deserialise; the canonical `/auth/*` handlers in
# `auth::handlers` mint them. Server depending on the public SDK
# for wire types is intentional — they're the contract.
#
# `default-features = false` skips the optional client transports
# (didcomm, sealed-transfer, etc.); we only consume the type
# definitions in the default feature set.
vta-sdk = { path = "../vta-sdk", version = "0.19", default-features = false }
async-trait = "0.1"
# Durable OutboxStore backend (`outbox_store::VtiOutboxStore`) for the D1
# delivery layer — the Guaranteed-send outbox, persisted via `store::Store`.
affinidi-messaging-delivery = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
fjall = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
# Idempotency middleware buffers request + response bodies (bounded by
# `MAX_BODY_BYTES`) so it can hash inputs + cache outputs.
http-body-util = "0.1"
bytes = "1"

# Secrets resolver (for error type)
affinidi-tdk = { workspace = true }
affinidi-data-integrity = { workspace = true }
trust-tasks-rs = { workspace = true }
trust-tasks-capability-client = { workspace = true }
# DID resolution for SIOPv2 id_token verification (auth::siop). The
# resolver + `DocumentExt` (from affinidi-tdk) turn an `iss` DID into the
# Ed25519 verifying key. multibase decodes the `did:key` key for pinning.
affinidi-did-resolver-cache-sdk = { workspace = true }
multibase = { workspace = true }

# Encryption (feature-gated; `rand` is non-optional and lives in the main
# dep block since audit_key rotation also needs OS randomness).
aes-gcm = { workspace = true, optional = true }
zeroize = { version = "1", features = ["derive"], optional = true }

# Vsock storage proxy client (feature-gated, Linux only)
tokio-vsock = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

# OpenAPI: `#[derive(ToSchema)]` on shared wire types (`Role`, `SessionState`).
# Optional + gated on the `openapi` feature so non-service consumers stay slim.
utoipa = { workspace = true, optional = true }
# utoipa-axum `UtoipaMethodRouter` layering for the OpenAPI-aware
# Trust-Task route helpers (`trust_task::openapi`). Gated on `openapi`.
utoipa-axum = { workspace = true, optional = true }

# Passkey feature deps. `rand` / `uuid` / `hex` are non-optional and
# live in the main dep block since audit + idempotency need them
# unconditionally.
webauthn-rs = { workspace = true, optional = true }
url = { workspace = true, optional = true }
# Setup feature: shared dialoguer prompts for VTA + VTC `vtc setup` /
# `vta setup` interactive wizards.
dialoguer = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
# `base64` is now in the main `[dependencies]` (audit envelope encodes
# 32-byte hashes as base64url strings).
# Drives Router::oneshot in the trust_task router tests. Same pattern
# vtc-service / vta-service use for integration tests.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"

[lints]
workspace = true
