# Standalone workspace root: this crate is excluded from the repo's root
# workspace (Linux-only, see below), so it declares its own empty
# `[workspace]` table. Without it, cargo run inside this directory walks up
# to the root manifest and refuses to operate on a non-member package.
[workspace]

[package]
name = "enclave-proxy"
description = "VTA Nitro Enclave parent-instance proxy — bridges vsock, TCP, and TLS"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0"
publish = false

# This crate is NOT a workspace member (excluded in root Cargo.toml).
# Reason: tokio-vsock requires Linux — can't compile on macOS/Windows.
# Build on the EC2 parent instance:
#   cd deploy/nitro/enclave-proxy && cargo build --release
#
# IMPORTANT: Keep dependency versions aligned with the workspace.
# When updating workspace deps (tokio, serde, tracing, fjall, etc.),
# update the versions here too to prevent version drift.

[[bin]]
name = "enclave-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"] }
tokio-vsock = "0.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "1"
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
affinidi-did-resolver-cache-sdk = "0.8"
fjall = "3"
